--- a/indexcon.html
+++ b/indexcon.html
@@ -26,10 +26,11 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
+
   </head>
-  <body style="background-color: rgb(255, 182, 182)">
+  <body style="background-color: rgb(241, 174, 254)">
     <h1 class="style2 middle red undline">My Portfolio</h1>
-ิ<br>
+<br>
     <div id="a" class="d-flex p-4" style="background-color: rgb(255, 255, 255);">
       <div class="d-flex mx-auto">
         <div>
@@ -40,53 +41,25 @@
         <div class="display-5 mb-3">
           <h2 class="style3 middle blue s25">Pawaris Panya</h2>
         </div>
-        <div >
-          <p class="style1 middle s15">
-            Hi my name is Noon. I am currently studying at Chiangmai University. I'm
-            looking forward to working with you!
-          </p>
+        <div class="text-muted">
+        <p class="style1 middle s15">
+      Hi my name is Noon. I am currently studying at Chiangmai University. I'm
+      looking forward to working with you!
+        </p>
         </div>
-      </div>      
+      </div>
     </div>
-
-    <br>
+<br>
     <div class="middle s20">
-      <a href="">| Home |</a>
+      <a href="index.html" target="_self">| Home |</a>
       <a href="indexgal.html" target="_self">| My Gallery |</a>
       <a href="indexex.html" target="_self">| Experiences |</a>
-      <a href="indexcon.html" target="_self">| Contact me |</a>
+      <a href="">| Contact me |</a>
     </div>
 <br>
-    <h3 class="style3 middle black s25 undline">My skills</h3>
+    <h3 class="style3 middle black s25 undline">Contacts</h3>
 <br>
-<div class="d-flex gap-3 justify-content-center flex-wrap align-items-start">
-<div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="stek.jfif" class="img-fluid rounded-start" alt="">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Cooking</h5>
-        <p class="card-text">I can cook a lot of various food such as Thai , Japanese, Italian food
-        and more.</p>
-      </div>
-    </div>
-  </div>
-</div>
+    <p class="style1 middle s20"> E-mail : <a href="mailto:pawaris_panya@cmu.ac.th">pawaris_panya@cmu.ac.th</a> <br> Tel : 062-318-3115 <br> Line ID : noon8412 <br> Facebook : <a href="https://www.facebook.com/manoon.kunh">Manoon Kung Naja</a></p>
 
-<div class="d-flex gap-3 justify-content-center flex-wrap align-items-start">
-<div class="card mb-3" style="max-width: 540px; ">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="codeja.jfif" class="img-fluid rounded-start" alt="">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Coding</h5>
-        <p class="card-text">I have experience in Scratch and C++. And currently studying in HTML.</p>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
+  </body>
+</html>
