--- a/indexgal.html
+++ b/indexgal.html
@@ -27,9 +27,9 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
   </head>
-  <body style="background-color: rgb(255, 182, 182)">
+  <body style="background-color: rgb(208, 208, 208)">
     <h1 class="style2 middle red undline">My Portfolio</h1>
-ิ<br>
+<br>
     <div id="a" class="d-flex p-4" style="background-color: rgb(255, 255, 255);">
       <div class="d-flex mx-auto">
         <div>
@@ -41,52 +41,54 @@
           <h2 class="style3 middle blue s25">Pawaris Panya</h2>
         </div>
         <div >
-          <p class="style1 middle s15">
-            Hi my name is Noon. I am currently studying at Chiangmai University. I'm
-            looking forward to working with you!
-          </p>
+        <p class="style1 middle s15">
+      Hi my name is Noon. I am currently studying at Chiangmai University. I'm
+      looking forward to working with you!
+        </p>
         </div>
-      </div>      
+      </div>
     </div>
-
     <br>
     <div class="middle s20">
-      <a href="">| Home |</a>
-      <a href="indexgal.html" target="_self">| My Gallery |</a>
+      <a href="index.html">| Home |</a>
+      <a href="">| My Gallery |</a>
       <a href="indexex.html" target="_self">| Experiences |</a>
       <a href="indexcon.html" target="_self">| Contact me |</a>
     </div>
 <br>
-    <h3 class="style3 middle black s25 undline">My skills</h3>
-<br>
+    <h3 class="style3 middle black s25 undline">My photos</h3>
+    <br>
+    
+   
+
 <div class="d-flex gap-3 justify-content-center flex-wrap align-items-start">
-<div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="stek.jfif" class="img-fluid rounded-start" alt="">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Cooking</h5>
-        <p class="card-text">I can cook a lot of various food such as Thai , Japanese, Italian food
-        and more.</p>
-      </div>
-    </div>
+
+<div class="card" style="width: 18rem;">
+  <img src="maa.jfif" class="card-img-top" alt="">
+  <div class="card-body">
+    <p class="card-text">This is my aunt's dog named Fulong. He like to play with me because I always sleep with him when he was young.</p>
   </div>
 </div>
 
-<div class="d-flex gap-3 justify-content-center flex-wrap align-items-start">
-<div class="card mb-3" style="max-width: 540px; ">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="codeja.jfif" class="img-fluid rounded-start" alt="">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Coding</h5>
-        <p class="card-text">I have experience in Scratch and C++. And currently studying in HTML.</p>
-      </div>
-    </div>
+<div class="card" style="width: 18rem;">
+  <img src="jubkao.jfif" class="card-img-top" alt="">
+  <div class="card-body">
+    <p class="card-text">This is a picture of me trying to pick up Fuji mountain.</p>
   </div>
 </div>
+
+<div class="card" style="width: 18rem;">    
+    <img src="pabwad.jfif" class="card-img-top" alt="">
+  <div class="card-body">
+    <p class="card-text">This is my drawing when I was in matthayom. It is about fashion using recycled garbages bag and it was my masterpiece!</p>
+  </div>
+</div>
+
+<div class="card" style="width: 18rem;">
+  <img src="hamburg.jfif" class="card-img-top" alt="">
+  <div class="card-body">
+    <p class="card-text">This is a picture of hamburg I've cooked sauce with jus I made.</p>
+  </div>
+</div>
+
 </div>
